[gd_scene load_steps=6 format=3 uid="uid://bf4sjfwvbg1x0"]

[ext_resource type="Script" path="res://world_scenes/wall/wall.gd" id="1_45v5x"]
[ext_resource type="Texture2D" uid="uid://bes6jbhcjufb5" path="res://icon.svg" id="2_nefec"]
[ext_resource type="Texture2D" uid="uid://tbyc7pt578v3" path="res://world_scenes/world_textures/testDirt.png" id="3_nabsf"]

[sub_resource type="Curve" id="Curve_xmr50"]
_data = [Vector2(0, 0.5), 0.0, 0.5, 0, 1, Vector2(1, 1), 0.5, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_rlnl1"]
_data = [Vector2(0, 0.5), 0.0, 0.5, 0, 1, Vector2(1, 1), 0.5, 0.0, 1, 0]
point_count = 2

[node name="Wall" type="Node2D"]
script = ExtResource("1_45v5x")
wallTexture = ExtResource("3_nabsf")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 64, 0, 32, 0, 32, 4)
width = 2.0
default_color = Color(0.701961, 0.701961, 0.701961, 1)

[node name="poly" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_nefec")
uv = PackedVector2Array(0, 128, 128, 128, 128, 0, 0, 0)

[node name="Outlines" type="Node2D" parent="."]

[node name="bottomLine" type="Line2D" parent="Outlines"]
z_index = -2
width = 4.0
default_color = Color(0.203922, 0.109804, 0.152941, 1)
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 5

[node name="topLine" type="Line2D" parent="Outlines"]
z_index = 10
width = 4.0
default_color = Color(0.00392157, 0.0509804, 0.0313726, 1)
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 5

[node name="leftLine" type="Line2D" parent="Outlines"]
z_index = 1
width = 4.0
width_curve = SubResource("Curve_xmr50")
default_color = Color(0.203922, 0.109804, 0.152941, 1)
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 5

[node name="rightLine" type="Line2D" parent="Outlines"]
z_index = 1
width = 4.0
width_curve = SubResource("Curve_rlnl1")
default_color = Color(0.203922, 0.109804, 0.152941, 1)
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 5

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
